<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_text_view"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/name_text_view" />


        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_name_edit_text"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/type_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_text_view"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="@string/type_text_view" />

            <Spinner
                android:id="@+id/type_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/address_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adress_text_view"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_address_edit_text"
            android:inputType="textPostalAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone_number_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_text_view"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_phone_edit_text"
                android:inputType="phone" />
        </LinearLayout>

        <TextView
            android:id="@+id/url_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/url_text_view"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/url_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_url_edit_text"
            android:inputType="textUri" />

        <TextView
            android:id="@+id/comment_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment_text_view"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/comment_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_comment_edit_text"
            android:inputType="textMultiLine" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>