<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/share_action_menu"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="10"
        android:title="@string/share_menu_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/how_go_action_menu"
        android:icon="@android:drawable/ic_menu_directions"
        android:orderInCategory="20"
        android:title="@string/how_to_go_menu_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/edit_action_menu"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="30"
        android:title="@string/edit_menu_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete_action_menu"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="40"
        android:title="@string/delete_menu_text"
        app:showAsAction="ifRoom" />
</menu>